apps/n8n/n8n.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: n8n
  namespace: automation
  labels:
    app: n8n
spec:
  replicas: 1
  selector:
    matchLabels:
      app: n8n
  template:
    metadata:
      labels:
        app: n8n
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: n8n
          image: homelab/n8n-custom:v6
          imagePullPolicy: Never
          # Restart if dead (Liveness), wait to receive traffic (Readiness)
          livenessProbe:
            httpGet:
              path: /healthz
              port: 5678
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /healthz
              port: 5678
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            limits:
              memory: "1Gi"
              cpu:     500m
            requests:
              memory: "512Mi" 
              cpu:     250m     
          ports:
            - containerPort: 5678
          volumeMounts:
            - name: n8n-storage
              mountPath: /home/node/.n8n
            # Mount Scripts and Keys
            - name: scripts-vol
              mountPath: /home/node/scripts
            - name: ssh-key-vol
              mountPath: /home/node/.ssh/id_rsa
              subPath: id_rsa
              readOnly: true
      volumes:
        - name: n8n-storage
          persistentVolumeClaim:
            claimName: n8n-pvc
        # Defining where the data comes from
        - name: scripts-vol
          configMap:
            name: n8n-scripts
            defaultMode: 0755
        - name: ssh-key-vol
          secret:
            secretName: n8n-ssh-key
            defaultMode: 0400
---
apiVersion: v1
kind: Service
metadata:
  name: n8n
  namespace: automation
spec:
  ports:
    - port: 5678
      targetPort: 5678
  selector:
    app: n8n
